# agent-os

./: .dockerignore  .gitignore  Dockerfile  README.md  README_HF.md  __init__.py  agents.py  app.py  base_environment.py  benchmark_engine.py  benchmark_tasks.py  client.py  create_github_repo.py  demo_file.txt  domains.py  hackathon_environment.py  inference.py  judge_engine.py  mcp_client.py  models.py  multi_agent_env.py  openenv.yaml  push_to_github.sh  pyproject.toml  requirements.txt  reward_engine.py  situations.py  smoke_test.py  task_graders.py  tool_schemas.py  validate_local.py
server/: Dockerfile  __init__.py  app.py  hackathon_environment.py  requirements.txt
tests/: test_catalog_and_leakage.py  test_progression_and_proxy.py  test_scoring_regressions.py
