[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-hackathon"
version = "1.0.0"
description = "Hackathon environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "gradio>=6.10.0",
    "openai>=1.75.0",
    "openenv-core[core]>=0.2.2",
    "pydantic>=2.12.5",
    "requests>=2.33.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["server"]
py-modules = [
    "agents",
    "app",
    "base_environment",
    "benchmark_tasks",
    "domains",
    "hackathon_environment",
    "judge_engine",
    "mcp_client",
    "models",
    "multi_agent_env",
    "reward_engine",
    "situations",
    "task_graders",
    "tool_schemas",
]
